--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+h3, span, p{
+  font-family: 'Poppins', sans-serif !important; 
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-body {
+  background-image: linear-gradient(#e7d1ff, #6f26ac);
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 20px !important;
 }
 
-.App-link {
-  color: #61dafb;
+.card-body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  width: 450px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-container, .input-container{
+  margin: 20px;
+  text-align: center;
+}
+
+.phone-data{
+  text-align: center;
+}
+
+.phone-span{
+  text-transform: capitalize;
+  margin-left: 10px;
+  font-weight: 500;
+}
+
+.loader-container{
+  text-align: center;
 }
